--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -13,3 +13,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Rozha+One&display=swap');
+
+
+h1 {
+    font-family: 'Rozha One', serif;
+}
+
+a {
+    text-decoration: none;
+}
