--- a/front-end/src/components/navbar/Navbar.css
+++ b/front-end/src/components/navbar/Navbar.css
@@ -9,7 +9,7 @@
 }
 
 .nav-style ul {
-    padding-right: 50px;
+    padding-right: 20px;
 }
 
 .nav-style li {
@@ -18,9 +18,36 @@
     padding-left: 20px;
 }
 
+.nav-style img {
+    width: 150px;
+    padding-left: 10px;
+}
+
+.nav-style a {
+    color:  #F0D5C0;
+    font-size: 0.9rem;
+    font-weight: 300;
+    border-bottom: 5px;
+}
+
+.selected {
+    color: #DC7364;
+  
+}
+
+
+
 
 @media screen and (min-width: 800px) {
     .nav-style {
         background-color: transparent;
     }
+
+    .selected {
+        color:#21619A;
+      
+    }
+
+
+    
 }
