--- a/front-end/src/components/navbar/Navbar.css
+++ b/front-end/src/components/navbar/Navbar.css
@@ -6,36 +6,51 @@
     width: 100%;
     height: 50px;
     background-color: #094275;
+    opacity: 0.8;
 }
 
 .nav-style ul {
-    padding-right: 20px;
+    padding: 0;
 }
 
 .nav-style li {
     list-style: none;
     display: inline;
-    padding-left: 20px;
-}
-
-.nav-style img {
-    width: 150px;
-    padding-left: 10px;
+    padding-right: 20px;
 }
 
 .nav-style a {
     color:  #F0D5C0;
     font-size: 0.9rem;
     font-weight: 300;
-    border-bottom: 5px;
+}
+
+.nav-left {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.logo-icon {
+    visibility: hidden;
+}
+
+.nav-icon {
+    visibility: visible;
+}
+
+.nav-icon img{
+    height: 30px;
+    visibility: visible;
+}
+
+.nav-text-link {
+    visibility: hidden;
 }
 
 .selected {
     color: #DC7364;
-  
 }
-
-
 
 
 @media screen and (min-width: 800px) {
@@ -44,10 +59,22 @@
     }
 
     .selected {
-        color:#21619A;
-      
+        color:#21619A; 
     }
 
+    .nav-icon {
+        visibility: hidden;
+    }
+
+    .nav-text-link {
+        visibility: visible;
+    }
+
+    .logo-icon {
+    
+        width: 80px;
+        padding-left: 10px;
+    }
 
     
 }
