--- a/front-end/src/components/signup/Signup.css
+++ b/front-end/src/components/signup/Signup.css
@@ -1,3 +1,8 @@
+.sign-up-page{
+    background-color:#094275;
+    height:100vh;
+}
+
 .outercontainer{
     text-align:center;
     padding-top:50px;
