--- a/front-end/src/components/navbar/Navbar.css
+++ b/front-end/src/components/navbar/Navbar.css
@@ -5,16 +5,10 @@
     align-items: center;
     width: 100%;
     height: 50px;
-    background-color: #094275;
-    opacity: 0.8;
 }
 
-/* .shadow-nav {
-    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
-} */
-
 .nav-style a {
-    color: #F0D5C0;
+    color: var(--paper-color);
     font-size: 0.9rem;
     font-weight: 400;
     white-space: pre;
@@ -59,17 +53,13 @@
 }
 
 .selected {
-    color: #DC7364 !important;
+    color: var(--coral-color) !important;
 }
 
 
 @media screen and (min-width: 800px) {
-    .nav-style {
-        background-color: transparent;
-    }
-
     .nav-style a {
-        color: #094275;
+        color: var(--dark-blue-color);
     }
 
     .logo-icon {
@@ -110,7 +100,7 @@
     }
 
     .selected {
-        color: #DC7364 !important;
+        color: var(--coral-color) !important;
     }
 
 }
