--- a/front-end/src/components/login/Login.css
+++ b/front-end/src/components/login/Login.css
@@ -1,19 +1,20 @@
 .login-page{
-    background-color:#DC7364;
-    height:100vh;
+    background-color: var(--coral-color);
+    height: 100vh;
 }
 .login-container{
-  text-align:center;
-  padding-top:50px;
+  text-align: center;
+  padding-top: 50px;
 }
 
 .login-container h1{
-    margin:0;
+  color: var(--paper-color);
+  font-size: 8vw;
 }
 
 .login-form form{
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
 }
 
 .login-form label{
@@ -23,5 +24,11 @@
 .login-form input{
     display: block;
     margin : 0 auto;
-    width:20vw;
+    width: 20vw;
+}
+
+@media screen and (min-width: 800px) {
+    .login-container h1 {
+        font-size: 5vw;
+    }
 }
