--- a/front-end/src/components/navbar/Navbar.css
+++ b/front-end/src/components/navbar/Navbar.css
@@ -5,6 +5,8 @@
     align-items: center;
     width: 100%;
     height: 50px;
+    /* background-color: whitesmoke;
+    box-shadow: 0 4px 4px -4px rgba(0,0,0,.4); */
 }
 
 .nav-style a {
@@ -32,7 +34,7 @@
 }
 
 .nav-icon img{
-    height: 30px;
+    height: 25px;
     opacity: 0.8;
 }
 
