--- a/front-end/src/components/elements/navbar/Navbar.css
+++ b/front-end/src/components/elements/navbar/Navbar.css
@@ -5,16 +5,15 @@
     align-items: center;
     width: 100%;
     height: 50px;
-    /* background-color: whitesmoke;
-    box-shadow: 0 4px 4px -4px rgba(0,0,0,.4); */
+    background-color: white;
+    box-shadow: 0 4px 4px -4px rgba(0,0,0,.4);
 }
 
 .nav-style a {
-    color: var(--paper-color);
-    font-size: 0.9rem;
+    color: var(--dark-blue-color);
+    font-size: 0.7rem;
     font-weight: 400;
     white-space: pre;
-    text-wrap: none;
 }
 
 .nav-left {
@@ -22,20 +21,31 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 0 30px;
+    height: 50px;
+    padding: 0 5px;
+}
+
+.profile-img {
+    border-radius: 90px;
+    border: 0.5px solid lightgray;
+    object-fit: cover;
+    width: 27px;
+    height: 27px;
+    margin: 0 15px;
 }
 
 .nav-big-screen {
     display: none;
 }
 
-.logo-icon {
+.nav-big-screen img{
     display: none;
 }
 
 .nav-icon img{
-    height: 25px;
+    height: 20px;
     opacity: 0.8;
+    margin: 0 15px;
 }
 
 .nav-right {
@@ -47,11 +57,16 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding-right: 30px;
+    padding-right: 10px;
 }
 
 .nav-right-no-user a {
-    padding-left: 25px;
+    padding-right: 15px;
+}
+
+.nav-big-screen-no-user img {
+    padding-top: 4px;
+    width: 110px; 
 }
 
 .selected {
@@ -61,23 +76,28 @@
 
 @media screen and (min-width: 800px) {
     .nav-style a {
-        color: var(--dark-blue-color);
+        font-size: 0.8rem;
     }
 
-    .logo-icon {
-        display: inherit;
+    .nav-left{
+        padding: 0 10px;
     }
 
-    .logo-icon img {
-        width: 150px;
+    .nav-left img {
+        display: none;
     }
 
-    .nav-big-screen {
+    .nav-big-screen  {
         display: inherit;
         width: 100%;
         display: flex;
         justify-content: left;
         align-items: center;
+    }
+
+    .nav-big-screen img {
+        display: inherit;
+        width: 130px;
     }
 
     .nav-big-screen a {
@@ -94,11 +114,20 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        padding-right: 30px;
     }
 
     .nav-right a {
-        padding-left: 25px;
+        padding: 0 20px;
+    }
+
+    .profile-img {
+        width: 30px;
+        height: 30px;
+        margin: 0;
+    }
+
+    .nav-right-no-user a {
+        padding: 0 20px;
     }
 
     .selected {
