fixed bug and created bookshelf component

--- a/front-end/src/components/elements/button/button.css
+++ b/front-end/src/components/elements/button/button.css
@@ -24,3 +24,8 @@
 .btn--primary:hover {
     background-color: orange;
 }
+
+.btn:disabled {
+    cursor: not-allowed;
+    background-color: gray;
+}
