--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,6 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Rozha+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@font-face {
+  font-family: 'socialicoregular';
+  src: url('./assets/fonts/socialico-regular-webfont.woff2') format('woff2'),
+       url('./assets/fonts/socialico-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'socialico_plusplus';
+  src: url('./assets/fonts/socialicoplus-plus-webfont.woff2') format('woff2'),
+       url('./assets/fonts/socialicoplus-plus-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 
 :root {
   --dark-blue-color: #094275;
