changed navbar for signup and login

--- a/front-end/src/components/elements/navbar/Navbar.css
+++ b/front-end/src/components/elements/navbar/Navbar.css
@@ -16,6 +16,10 @@
     white-space: pre;
 }
 
+.about-link {
+    cursor: pointer;
+}
+
 .nav-left {
     display: flex;
     justify-content: space-between;
