--- a/front-end/src/components/elements/button/button.css
+++ b/front-end/src/components/elements/button/button.css
@@ -12,10 +12,11 @@
 
 .btn--default {
     color: var(--dark-blue-color);
+    background-color: transparent;
 }
 
 .btn--default:hover {
-    background-color: transparent;
+    background-color: var(--dark-blue-color);
 }
 
 .btn--primary {
