--- a/front-end/src/components/pages/profile/Profile.css
+++ b/front-end/src/components/pages/profile/Profile.css
@@ -3,7 +3,7 @@
     right: 20px;
     top: 50px;
     cursor: pointer;
-    color: var(--coral-color)
+    color: var(--paper-color)
 }
 
 .main-container-profile{
@@ -18,8 +18,9 @@
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: 80vh;
-    background-color: var(--coral-color)
+    height: 100%;
+    background-color: var(--coral-color);
+    padding-bottom: 30px;
 }
 
 .first-container-profile img {
@@ -28,7 +29,7 @@
     object-fit: cover;
     width: 150px;
     height: 150px;
-    margin: 0 15px;
+    margin: 100px 0 20px 0;
 }
 
 .second-container-profile{
@@ -37,18 +38,28 @@
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: 50vh;
+    height: 100%;
     background-color: var(--paper-color);
+}
+
+.second-container-profile div {
+    margin: 50px 0;
 }
 
 
 
+
 @media screen and (min-width: 800px) {
+    .logout-link {
+        color: var(--coral-color)
+    }
+
     .first-container-profile {
         width: 50vw;
         height: 98vh;
         align-items: center;
         justify-content: flex-start;
+        padding-bottom: 0;
     }
 
     .second-container-profile {
