--- a/front-end/src/components/pages/profile/Profile.css
+++ b/front-end/src/components/pages/profile/Profile.css
@@ -19,7 +19,7 @@
     justify-content: center;
     width: 100vw;
     height: 100%;
-    background-color: var(--coral-color);
+    background-color: var(--paper-color);
     padding-bottom: 30px;
 }
 
@@ -39,7 +39,7 @@
     justify-content: center;
     width: 100vw;
     height: 100%;
-    background-color: var(--paper-color);
+    /* background-color: var(--paper-color); */
 }
 
 .second-container-profile div {
