--- a/front-end/src/components/pages/startupflow/startupflow.css
+++ b/front-end/src/components/pages/startupflow/startupflow.css
@@ -1,3 +1,7 @@
+.startup-greeting {
+    margin-top:20vh;
+}
+
 .startup-flow {
     background-color: var(--dark-blue-color);
     color: var(--paper-color);
@@ -5,7 +9,7 @@
     height: 100vh;
     width:100vw;
     text-align:center;
-
+    overflow:auto;
 }
 
 .search-container{
@@ -16,38 +20,45 @@
     margin-left: auto;
     background-color: var(--paper-color);
     color:var(--dark-blue-color);
-    width:75vw;
+    width:80vw;
     height:95vh;
+    overflow:auto;
 }
 
+.search-title{
+    text-align:center;
+    margin-top:10px;
+    margin-bottom:5px;
+}
 
-.input-container{
+.input-container {
+	margin: auto
+}
+
+.input-container form{
     display:flex;
     flex-direction:row;
+    flex-flow: row wrap;
+    text-align:center;
+    width:70vw;
 }
 
 .search-result{
-    width:40%;
-}
-
-.search-result form {
-    display:flex;
-    flex-direction:row;
-}
-
-.bookresult {
+    width:33%;
     display:flex;
     flex-direction:column;
     align-items:center;
-    margin: 10px;
+    margin:5px auto;
 }
 
-.bookresult img{
-    width:10vw;
+.search-result h3, h4{
+    margin: 2px auto;
+}
+
+.search-result img{
+    width:8vw;
 }
 
 @media screen and (min-width: 800px) {
-
-
     
 }
