--- a/front-end/src/components/elements/turnedcorner/TurnedCorner.css
+++ b/front-end/src/components/elements/turnedcorner/TurnedCorner.css
@@ -1,13 +1,13 @@
 .tc {
   width: 0;
   height: 0;
-  border-top: 50px solid var(--coral-color);
+  border-top: 50px solid transparent;
   border-right: 50px solid transparent;
   position: absolute;
 }
 
 .tc--home {
-  bottom: 50vh;
+  bottom: 2vh;
   right: 0;
 }
 
@@ -17,14 +17,14 @@
   .tc {
       width: 0;
       height: 0;
-      border-top: 9vh solid var(--coral-color);
+      border-top: 9vh solid var(--paper-color);
       border-right: 9vh solid transparent;
       position: absolute;
     }
 
     .tc--home {
       bottom: 2vh;
-      right: 50vw;
+      right: 0vw;
     }
 }
 
