display matches done and redirect to individual match profile

--- a/front-end/src/components/pages/matches/Matches.css
+++ b/front-end/src/components/pages/matches/Matches.css
@@ -2,3 +2,16 @@
     padding-top: 100px;
 }
 
+.crush-card{
+    margin: auto 5px;
+    padding: 5px;
+}
+
+.bookshelf-display{
+    display:flex;
+    flex-direction:row;
+}
+
+.owner-info img {
+    width:15vw;
+}
