first part styling matches page

--- a/front-end/src/components/pages/matches/Matches.css
+++ b/front-end/src/components/pages/matches/Matches.css
@@ -1,17 +1,58 @@
+.container-matches {
+    background-color:  rgb(240, 213, 192, 0.4);
+}
+
 .matches {
-    padding-top: 100px;
+    padding-top: 70px;   
 }
 
 .crush-card{
-    margin: auto 5px;
+    margin: 10px 5px;
     padding: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: white;
 }
 
 .bookshelf-display{
     display:flex;
     flex-direction:row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.bookshelf-display hr{
+    background-color: var(--coral-color);
+    height: 1px;
+    border: none;
+    margin: 0 30px 20px 30px;
+}
+
+.owner-info {
+    /* background-color: var(--dark-blue-color); */
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0 30px;
+    color: var(--dark-blue-color)
+}
+
+.owner-info h2 {
+    color: var(--coral-color);
+    margin: 0;
+}
+
+.owner-info p {
+    margin: 0;
 }
 
 .owner-info img {
-    width:15vw;
+    border-radius: 90px;
+    border: 0.5px solid rgb(9, 66, 117, 0.3);
+    object-fit: cover;
+    width: 75px;
+    height: 75px;
+    margin: 20px;
+    position: left;
 }
+
