--- a/front-end/src/components/pages/matches/Matches.css
+++ b/front-end/src/components/pages/matches/Matches.css
@@ -9,7 +9,7 @@
 .crush-card{
     margin: 10px 5px;
     padding: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
     background-color: white;
 }
 
@@ -40,6 +40,7 @@
 .owner-info h2 {
     color: var(--coral-color);
     margin: 0;
+    text-transform: capitalize;
 }
 
 .owner-info p {
