--- a/front-end/src/components/elements/navbar/Navbar.css
+++ b/front-end/src/components/elements/navbar/Navbar.css
@@ -30,6 +30,7 @@
     padding: 0 7px 0 2px;
 }
 
+  /* sidenav mobile */
 .sidenav {
     height: 100%; 
     width: 0;
@@ -42,8 +43,14 @@
     padding-top: 60px; 
     transition: 0.5s; 
 }
+
+.openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    color: var(--dark-blue-color) !important;
+    padding: 10px 15px;
+}
   
-  /* The navigation menu links */
 .sidenav a {
     display: block;
     transition: 0.3s;
@@ -52,20 +59,29 @@
     font-weight: 400;
     white-space: pre;
     text-align: center;
-    padding: 30px 20px 40px 0;
+    padding: 30px 0 40px 0;
+}
+
+.nav-style button {
+    background-color: transparent;
+    border: none;
+    color: var(--paper-color);
+    text-align: center;
+    width: 100%;
+    text-align: center;
+    margin-top: 40px;
+    font-size: 0.9rem;
+    font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
 }
   
-  /* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-    color: #f1f1f1;
-}
-  
-  /* Position and style the close button (top right corner) */
 .sidenav .closebtn {
     position: absolute;
-    top: -20px;
-    right: 0;
+    top: -15px;
+    right: 20px;
     font-size: 2rem;
+    color: var(--paper-color)
 }
 
 .sidenav hr {
@@ -75,17 +91,7 @@
     margin: 0 80px 0 80px;
 }
 
-
-/* .nav-big-screen {
-    display: none;
-}
-
-.nav-big-screen img{
-    display: none;
-} */
-
 .logo-readr  {
-    display: inherit;
     width: 100%;
     display: flex;
     justify-content: left;
@@ -93,14 +99,7 @@
 }
 
 .logo-readr img {
-    display: inherit;
     width: 90px;
-}
-
-.nav-icon img{
-    height: 20px;
-    opacity: 0.8;
-    margin: 0 15px;
 }
 
 .nav-right {
@@ -128,7 +127,7 @@
     color: var(--coral-color) !important;
 }
 
-/* Dropdown */
+/* Dropdown  */
 .profile-img {
     border-radius: 90px;
     border: 0.5px solid rgb(9, 66, 117, 0.3);
@@ -177,19 +176,6 @@
         padding: 0 10px;
     }
 
-    div.profile-img > img:first-child{
-        display: none;
-    }
-
-
-
-    .nav-big-screen a {
-        padding-right: 25px;
-    }
-
-    .nav-icon {
-        display: none;
-    }
 
     .nav-right {
         display: inherit;
@@ -203,25 +189,34 @@
         padding-left: 60px;
     }
 
-    .profile-img {
-        width: 30px;
-        height: 30px;
-        margin: 0 0 0 30px;
-    }
-
     .nav-right-no-user a {
         padding: 0 20px;
-    }
-
-
-    .selected {
-        color: var(--coral-color) !important;
     }
 
     .dropdown {
         position: relative;
         display: inline-block;
         margin: 0 20px 0 40px;
+    }
+
+    .nav-mobile {
+        display: none;
+    }
+
+    .nav-style button {
+        color: var(--dark-blue-color);
+        padding: 15px 0;
+        margin: 0px;
+        font-size: 0.8rem;
+    }
+
+    .nav-style button:hover {
+        background-color: var(--paper-color);
+    }
+
+
+    .logo-readr img {
+        width: 120px;
     }
 
 }
