--- a/front-end/src/components/pages/main/Main.css
+++ b/front-end/src/components/pages/main/Main.css
@@ -51,23 +51,20 @@
 }
 
 .review-section {
-    margin: 0 auto ;
+    margin: 0 auto 50px auto ;
+    padding-top:30px;
     width: 100vw; 
-    height: 55vh;
     text-align:center;
     background-color: var(--paper-color);
 }
 
 .review-section h2{
+    margin: 0 auto;
     text-align: center;
-    font-size: 5vw;
+    font-size: 7vw;
     color: var(--light-blue-color)
 }
 
-.review-section img{
-    width:23vw;
-    margin: auto 10px;
-}
 
 .social-icons-font1 {
     font-family: 'socialico_plusplus';
@@ -125,8 +122,6 @@
     justify-content: flex-start;
     align-items: center;
 }
-
-
 
 
 @media screen and (min-width: 800px) {
