--- a/front-end/src/components/elements/slider/slider.css
+++ b/front-end/src/components/elements/slider/slider.css
@@ -9,7 +9,8 @@
 }
 
 .carousel .slide img{
-    width:28vw !important;
+    width:25vw !important;
+    margin: auto 10px;
     border-radius: 20px ;
 }
 
